infrastructure/cdk.out/localstack.template.json
{
 "Resources": {
  "PatientManagmentVPC99414A9A": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "PatientManagmentVPC"
     }
    ]
   }
  },
  "PatientManagmentVPCPublicSubnet1Subnet91D49D15": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "localstack/PatientManagmentVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagmentVPC99414A9A"
    }
   }
  },
  "PatientManagmentVPCPublicSubnet1RouteTable78FF6646": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagmentVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagmentVPC99414A9A"
    }
   }
  },
  "PatientManagmentVPCPublicSubnet1RouteTableAssociationFBFDDA77": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientManagmentVPCPublicSubnet1RouteTable78FF6646"
    },
    "SubnetId": {
     "Ref": "PatientManagmentVPCPublicSubnet1Subnet91D49D15"
    }
   }
  },
  "PatientManagmentVPCPublicSubnet1DefaultRoute20293A81": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "PatientManagmentVPCIGW2CC136DD"
    },
    "RouteTableId": {
     "Ref": "PatientManagmentVPCPublicSubnet1RouteTable78FF6646"
    }
   },
   "DependsOn": [
    "PatientManagmentVPCVPCGWD5C97FF5"
   ]
  },
  "PatientManagmentVPCPublicSubnet1EIP0E031E72": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagmentVPC/PublicSubnet1"
     }
    ]
   }
  },
  "PatientManagmentVPCPublicSubnet1NATGateway9475217D": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "PatientManagmentVPCPublicSubnet1EIP0E031E72",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "PatientManagmentVPCPublicSubnet1Subnet91D49D15"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagmentVPC/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "PatientManagmentVPCPublicSubnet1DefaultRoute20293A81",
    "PatientManagmentVPCPublicSubnet1RouteTableAssociationFBFDDA77"
   ]
  },
  "PatientManagmentVPCPublicSubnet2Subnet368A5DE2": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "localstack/PatientManagmentVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagmentVPC99414A9A"
    }
   }
  },
  "PatientManagmentVPCPublicSubnet2RouteTableBFA52937": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagmentVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagmentVPC99414A9A"
    }
   }
  },
  "PatientManagmentVPCPublicSubnet2RouteTableAssociation645CFBA9": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientManagmentVPCPublicSubnet2RouteTableBFA52937"
    },
    "SubnetId": {
     "Ref": "PatientManagmentVPCPublicSubnet2Subnet368A5DE2"
    }
   }
  },
  "PatientManagmentVPCPublicSubnet2DefaultRoute7E2773DD": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "PatientManagmentVPCIGW2CC136DD"
    },
    "RouteTableId": {
     "Ref": "PatientManagmentVPCPublicSubnet2RouteTableBFA52937"
    }
   },
   "DependsOn": [
    "PatientManagmentVPCVPCGWD5C97FF5"
   ]
  },
  "PatientManagmentVPCPublicSubnet2EIP0B155A2D": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagmentVPC/PublicSubnet2"
     }
    ]
   }
  },
  "PatientManagmentVPCPublicSubnet2NATGatewayB36AED70": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "PatientManagmentVPCPublicSubnet2EIP0B155A2D",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "PatientManagmentVPCPublicSubnet2Subnet368A5DE2"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagmentVPC/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "PatientManagmentVPCPublicSubnet2DefaultRoute7E2773DD",
    "PatientManagmentVPCPublicSubnet2RouteTableAssociation645CFBA9"
   ]
  },
  "PatientManagmentVPCPrivateSubnet1SubnetE75E052F": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "localstack/PatientManagmentVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagmentVPC99414A9A"
    }
   }
  },
  "PatientManagmentVPCPrivateSubnet1RouteTable3F80B0C3": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagmentVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagmentVPC99414A9A"
    }
   }
  },
  "PatientManagmentVPCPrivateSubnet1RouteTableAssociation94FE3715": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientManagmentVPCPrivateSubnet1RouteTable3F80B0C3"
    },
    "SubnetId": {
     "Ref": "PatientManagmentVPCPrivateSubnet1SubnetE75E052F"
    }
   }
  },
  "PatientManagmentVPCPrivateSubnet1DefaultRoute229D3CDF": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "PatientManagmentVPCPublicSubnet1NATGateway9475217D"
    },
    "RouteTableId": {
     "Ref": "PatientManagmentVPCPrivateSubnet1RouteTable3F80B0C3"
    }
   }
  },
  "PatientManagmentVPCPrivateSubnet2SubnetDCE33113": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "localstack/PatientManagmentVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagmentVPC99414A9A"
    }
   }
  },
  "PatientManagmentVPCPrivateSubnet2RouteTableD49A563A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "localstack/PatientManagmentVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagmentVPC99414A9A"
    }
   }
  },
  "PatientManagmentVPCPrivateSubnet2RouteTableAssociation308C6060": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientManagmentVPCPrivateSubnet2RouteTableD49A563A"
    },
    "SubnetId": {
     "Ref": "PatientManagmentVPCPrivateSubnet2SubnetDCE33113"
    }
   }
  },
  "PatientManagmentVPCPrivateSubnet2DefaultRouteFC662BBE": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "PatientManagmentVPCPublicSubnet2NATGatewayB36AED70"
    },
    "RouteTableId": {
     "Ref": "PatientManagmentVPCPrivateSubnet2RouteTableD49A563A"
    }
   }
  },
  "PatientManagmentVPCIGW2CC136DD": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "PatientManagmentVPC"
     }
    ]
   }
  },
  "PatientManagmentVPCVPCGWD5C97FF5": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "PatientManagmentVPCIGW2CC136DD"
    },
    "VpcId": {
     "Ref": "PatientManagmentVPC99414A9A"
    }
   }
  },
  "AuthServiceDbSubnetGroup12237DD0": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for AuthServiceDb database",
    "SubnetIds": [
     {
      "Ref": "PatientManagmentVPCPrivateSubnet1SubnetE75E052F"
     },
     {
      "Ref": "PatientManagmentVPCPrivateSubnet2SubnetDCE33113"
     }
    ]
   }
  },
  "AuthServiceDbSecurityGroup4A0F0427": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for AuthServiceDb database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagmentVPC99414A9A"
    }
   }
  },
  "localstackAuthServiceDbSecretBE08D4303fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"admin_user\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "AuthServiceDbSecretAttachment4C4A1911": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "localstackAuthServiceDbSecretBE08D4303fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "AuthServiceDb4EA10E77"
    },
    "TargetType": "AWS::RDS::DBInstance"
   }
  },
  "AuthServiceDb4EA10E77": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "10",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t2.micro",
    "DBName": "auth-service-db",
    "DBSubnetGroupName": {
     "Ref": "AuthServiceDbSubnetGroup12237DD0"
    },
    "Engine": "postgres",
    "EngineVersion": "18.4",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "localstackAuthServiceDbSecretBE08D4303fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "admin_user",
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "AuthServiceDbSecurityGroup4A0F0427",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "PatientServiceDbSubnetGroup1312FFB6": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for PatientServiceDb database",
    "SubnetIds": [
     {
      "Ref": "PatientManagmentVPCPrivateSubnet1SubnetE75E052F"
     },
     {
      "Ref": "PatientManagmentVPCPrivateSubnet2SubnetDCE33113"
     }
    ]
   }
  },
  "PatientServiceDbSecurityGroupCEB42CD9": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for PatientServiceDb database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagmentVPC99414A9A"
    }
   }
  },
  "localstackPatientServiceDbSecretE29F42EC3fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"admin_user\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "PatientServiceDbSecretAttachment54460532": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "localstackPatientServiceDbSecretE29F42EC3fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "PatientServiceDb4C436D31"
    },
    "TargetType": "AWS::RDS::DBInstance"
   }
  },
  "PatientServiceDb4C436D31": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "10",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t2.micro",
    "DBName": "patient-service-db",
    "DBSubnetGroupName": {
     "Ref": "PatientServiceDbSubnetGroup1312FFB6"
    },
    "Engine": "postgres",
    "EngineVersion": "18.4",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "localstackPatientServiceDbSecretE29F42EC3fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "admin_user",
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "PatientServiceDbSecurityGroupCEB42CD9",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "AuthServiceDBHealthCheck": {
   "Type": "AWS::Route53::HealthCheck",
   "Properties": {
    "HealthCheckConfig": {
     "FailureThreshold": 3,
     "IPAddress": {
      "Fn::GetAtt": [
       "AuthServiceDb4EA10E77",
       "Endpoint.Address"
      ]
     },
     "Port": {
      "Fn::GetAtt": [
       "AuthServiceDb4EA10E77",
       "Endpoint.Port"
      ]
     },
     "RequestInterval": 30,
     "Type": "TCP"
    }
   }
  },
  "PatientServiceDBHealthCheck": {
   "Type": "AWS::Route53::HealthCheck",
   "Properties": {
    "HealthCheckConfig": {
     "FailureThreshold": 3,
     "IPAddress": {
      "Fn::GetAtt": [
       "PatientServiceDb4C436D31",
       "Endpoint.Address"
      ]
     },
     "Port": {
      "Fn::GetAtt": [
       "PatientServiceDb4C436D31",
       "Endpoint.Port"
      ]
     },
     "RequestInterval": 30,
     "Type": "TCP"
    }
   }
  },
  "MskCluster": {
   "Type": "AWS::MSK::Cluster",
   "Properties": {
    "BrokerNodeGroupInfo": {
     "BrokerAZDistribution": "DEFAULT",
     "ClientSubnets": [
      {
       "Ref": "PatientManagmentVPCPrivateSubnet1SubnetE75E052F"
      },
      {
       "Ref": "PatientManagmentVPCPrivateSubnet2SubnetDCE33113"
      }
     ],
     "InstanceType": "kafka.m5.xlarge"
    },
    "ClusterName": "kafka-cluster",
    "KafkaVersion": "2.8.0",
    "NumberOfBrokerNodes": 1
   }
  },
  "PatientManagmentCluster2109023F": {
   "Type": "AWS::ECS::Cluster"
  },
  "PatientManagmentClusterDefaultServiceDiscoveryNamespace11908AD7": {
   "Type": "AWS::ServiceDiscovery::PrivateDnsNamespace",
   "Properties": {
    "Name": "patient-managment.local",
    "Vpc": {
     "Ref": "PatientManagmentVPC99414A9A"
    }
   }
  }
 }
}
